--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name="Memorize"
                 android:label="@string/app_name"
-                android:theme="@android:style/Theme.NoTitleBar" 
+                android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen" 
                 android:screenOrientation="sensorLandscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
