add the list of the games in the modify part of the layout

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,6 +44,14 @@
             android:name="com.morphoss.xo.memorize.settings.SoundsActivity"
             android:screenOrientation="sensorLandscape"
             android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen" >
+            <intent-filter>
+                <action android:name="android.intent.action.MEDIA_CHECKING" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="audio/mp3" />
+            </intent-filter>
+
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.morphoss.xo.memorize" />
