add the activities to be able to modify an existing game

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -72,6 +72,30 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.morphoss.xo.memorize" />
         </activity>
+        <activity
+            android:name="com.morphoss.xo.memorize.settings.AdditionModifyActivity"
+            android:screenOrientation="sensorLandscape"
+            android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.morphoss.xo.memorize" />
+        </activity>
+        <activity
+            android:name="com.morphoss.xo.memorize.settings.LettersModifyActivity"
+            android:screenOrientation="sensorLandscape"
+            android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.morphoss.xo.memorize" />
+        </activity>
+        <activity
+            android:name="com.morphoss.xo.memorize.settings.SoundsModifyActivity"
+            android:screenOrientation="sensorLandscape"
+            android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.morphoss.xo.memorize" />
+        </activity>
     </application>
 
 </manifest>
